# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
gendiff/: differ.py  generate_diff.py  io.py  parser.py
gendiff/formatters/: ident_format.py  json.py  plain.py  stylish.py
gendiff/parsing/: cli.py  differ.py  io.py  opener.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_json_format.py  test_plain_format.py  test_plain_json_differ.py  test_plain_yaml_differ.py  test_recursive_json_differ.py  test_recursive_yaml_differ.py
gendiff/tests/fixture/plain_yaml/: file2.yaml
tests/: test.py  test_gendiff.py
